update parnters kols

--- a/app/views/partners/kols/capital_flow_sheet.html.erb
+++ b/app/views/partners/kols/capital_flow_sheet.html.erb
@@ -3,7 +3,7 @@
 <table class='table table-bordered'>
   <thead>
     <tr>
-      <%- %w(日期 流动方向 项目 金额 可用余额 可用余额 冻结余额).each do |ele| %>
+      <%- %w(日期 流动方向 项目 金额 可用余额 冻结余额 总余额（可用+冻结）).each do |ele| %>
         <th><%= ele %></th>
       <% end %>
     </tr>
@@ -13,7 +13,7 @@
     <% @transactions.each do |tr| %>
       <tr>
         <td><%= tr.created_at.to_s(:date_time) %></td>
-        <% %w(direct get_subject credits avail_amount amount frozen_amount).each do |ele| %>
+        <% %w(direct get_subject credits avail_amount frozen_amount amount).each do |ele| %>
         <td> <%= tr.send ele %> </td>
       <% end %>
       </tr>
