refs: add cooperation_data_reportes

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -286,6 +286,9 @@
             <li>
               <%= link_to t('stats_reports.campaign_release'), campaign_release_count_marketing_dashboard_stastic_datas_path %>
             </li>
+            <li>
+              <%= link_to t('stats_reports.cooperation_data_reportes'), cooperation_data_reportes_marketing_dashboard_stastic_datas_path%>
+            </li>
           </ul>
         </li>
         <% end %>
