--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -19,15 +19,27 @@
         <div class="panel-body">
           <div class="form-horizontal">
             <div class="form-group">
-              <label for="user" class="col-sm-2 control-label">Email</label>
+              <label for="email" class="col-sm-2 control-label">Email</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control" id="user" placeholder="Email">
+                <input type="email" class="form-control" id="email" placeholder="Email" disabled="disabled">
               </div>
             </div>
             <div class="form-group">
               <label for="phone" class="col-sm-2 control-label">Phone</label>
               <div class="col-sm-10">
-                <input type="tel" class="form-control" id="phone" placeholder="phone">
+                <input type="tel" class="form-control" id="phone" placeholder="phone" disabled="disabled">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="device_id" class="col-sm-2 control-label">Device Id</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="device_id" placeholder="device id" disabled="disabled">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="password" class="col-sm-2 control-label">Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="password" placeholder="password">
               </div>
             </div>
             <div class="form-group">
@@ -48,6 +60,36 @@
 
     <script type="text/javascript">
       $(document).ready(function() {
+        var form_data = {};
+        var phone_data = '';
+        var device_id_data = '';
+        var email_data = '';
+
+        var current_date = new Date();
+        current_date = current_date.customFormat('#YYYY##MM##DD##hhh##mm#');
+        console.log('当前时间:'+ current_date);
+
+        if (typeof jwPut != 'undefined' && jwPut.put_ToJs() != '') {
+          form_data = JSON.parse(jwPut.put_ToJs());
+          phone_data = form_data.phone_num;
+          device_id_data = form_data.device_id;
+          email_data = form_data.email;
+        }
+
+        // alert(form_data);
+        // alert(form_data.phone_num);
+        // alert(form_data.device_id);
+        // alert(form_data.email);
+
+        $('#email').val(email_data);
+        $('#phone').val(phone_data);
+        $('#device_id').val(device_id_data);
+
+        var email = $('#email').val();
+        var phone = $('#phone').val();
+        var device_id = $('#device_id').val();
+        var password = $('#password').val();
+
         var pems_create = PMES.create('test_password');
         console.log('create:', pems_create);
 
@@ -55,7 +97,7 @@
           pems_create.token,
           {
             'message': {
-              'timestamp': '201808101124',
+              'timestamp': current_date,
               'coinid': 'PUTTEST',
               'amount': '100000000000',
               'address': 'qZZfBCVXLHBt6ou1ZoZW6LiZH1qDHbWq8i',
@@ -67,36 +109,36 @@
 
         console.log('signature:', pems_sign.signature);
 
-        var email = $('#email').val();
-        var phone = $('#phone').val();
-
-        var data = {
+        var post_data = {
           'public_key': pems_create.public_key, //公開钥匙
           'message': {
             'email': email, //Robin8用户电子邮件
             'phone': phone, //Robin8用户电话
-            'timestamp': '201808091319' // 現在時間 201808091319, 格式 YYYYMMDDHHmm
+            'timestamp': current_date // 現在時間 201808091319, 格式 YYYYMMDDHHmm
           },
           'signature': pems_sign.signature
         };
 
-        data = JSON.stringify(data);
+        post_data = JSON.stringify(post_data);
         console.log(pems_create.public_key);
 
         $('#submit_btn').click(function(event) {
           $.ajax({
             url: 'http://190.2.149.83/api/accounts/',
             type: 'POST',
-            data: data,
+            data: post_data,
             success: function(data) {
               console.log(data);
               console.log(JSON.parse(data.wallets));
 
-              var post_data = JSON.stringify(data);
+              var post_native_data = JSON.stringify(data);
+              console.log(post_native_data);
 
               $('#data_container').append('<pre>'+ syntaxHighlight(data) +'</pre>');
 
-              jwPut.put_Login(post_data);
+              if (typeof jwPut != 'undefined') {
+                jwPut.put_Login(post_native_data);
+              }
             },
             error: function(xhr, type) {
               console.log('error');
@@ -105,6 +147,9 @@
         });
       });
 
+      function dataFromNative(demo_data) {
+        alert(demo_data);
+      }
 
       function syntaxHighlight(json) {
         if (typeof json != 'string') {
@@ -127,6 +172,53 @@
           }
           return '<span class="' + cls + '">' + match + '</span>';
         });
+      }
+
+      Date.prototype.customFormat = function(formatString) {
+        var YYYY, YY, MMMM, MMM, MM, M, DDDD, DDD, DD, D, hhhh, hhh, hh, h, mm, m, ss, s, ampm, AMPM, dMod, th;
+        var dateObject = this;
+        YY = ((YYYY = dateObject.getFullYear()) + '').slice(-2);
+        MM = (M = dateObject.getMonth() + 1) < 10 ? ('0' + M) : M;
+        MMM = (MMMM = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'][M - 1]).substring(0, 3);
+        DD = (D = dateObject.getDate()) < 10 ? ('0' + D) : D;
+        DDD = (DDDD = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'][dateObject.getDay()]).substring(0, 3);
+        th = (D >= 10 && D <= 20) ? 'th' : ((dMod = D % 10) == 1) ? 'st' : (dMod == 2) ? 'nd' : (dMod == 3) ? 'rd' : 'th';
+        formatString = formatString
+                      .replace('#YYYY#', YYYY)
+                      .replace('#YY#', YY)
+                      .replace('#MMMM#', MMMM)
+                      .replace('#MMM#', MMM)
+                      .replace('#MM#', MM)
+                      .replace('#M#', M)
+                      .replace('#DDDD#', DDDD)
+                      .replace('#DDD#', DDD)
+                      .replace('#DD#', DD)
+                      .replace('#D#', D)
+                      .replace('#th#', th);
+
+        h = (hhh = dateObject.getHours());
+        if (h == 0) {
+          h = 24;
+        }
+        if (h > 12) {
+          h -= 12;
+        }
+        hh = h < 10 ? ('0' + h) : h;
+        hhhh = hhh < 10 ? ('0' + hhh) : hhh;
+        AMPM = (ampm = hhh < 12 ? 'am' : 'pm').toUpperCase();
+        mm = (m = dateObject.getMinutes()) < 10 ? ('0' + m) : m;
+        ss = (s = dateObject.getSeconds()) < 10 ? ('0' + s) : s;
+        return formatString
+              .replace('#hhhh#', hhhh)
+              .replace('#hhh#', hhh)
+              .replace('#hh#', hh)
+              .replace('#h#', h)
+              .replace('#mm#', mm)
+              .replace('#m#', m)
+              .replace('#ss#', ss)
+              .replace('#s#', s)
+              .replace('#ampm#', ampm)
+              .replace('#AMPM#', AMPM);
       }
     </script>
   </body>
