update marketing_dashboard users show

--- a/app/views/marketing_dashboard/users/show.html.erb
+++ b/app/views/marketing_dashboard/users/show.html.erb
@@ -21,7 +21,7 @@
     <td><%= raw(@user.is_live ? "<span class='label label-success'>真实数据</span>" : "<span class='label label-danger'>实验数据</span>") %></td>
   </tr>
   <tr>
-    <td>是否激活品牌住账号</td>
+    <td>是否激活品牌主账号</td>
     <td><%= raw(@user.is_active ? "<span class='label label-success'>已激活</span>" : "<span class='label label-danger'>未激活</span>") %></td>
   </tr>
   <tr>
