--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -134,11 +134,38 @@
               var post_native_data = JSON.stringify(data);
               console.log(post_native_data);
 
-              $('#data_container').append('<pre>'+ syntaxHighlight(data) +'</pre>');
+              // $('#data_container').append('<pre>'+ syntaxHighlight(data) +'</pre>');
 
               if (typeof jwPut != 'undefined') {
                 jwPut.put_Login(post_native_data);
               }
+
+              var wallets_data = JSON.parse(data.wallets);
+              var put_puttest = '';
+              $.each(wallets_data, function(index, el) {
+                if (el.coinid === 'PUTTEST') {
+                  put_puttest = el;
+                }
+              });
+
+              console.log(put_puttest.address);
+
+              $.ajax({
+                url: 'http://190.2.149.83/api/v2_0/kols/bind_e_wallet',
+                type: 'POST',
+                data: {
+                  'put_address': put_puttest.address
+                },
+                beforeSend: function(xhr) {
+                  xhr.setRequestHeader('Authorization', 'Basic bmVvd2F5Oe4lb3dheQ==');
+                },
+                success: function(data) {
+                  alert(data);
+                },
+                error: function(xhr, type) {
+                  console.log('error');
+                }
+              });
             },
             error: function(xhr, type) {
               console.log('error');
