--- a/app/views/pages/blockchain_intro.html.erb
+++ b/app/views/pages/blockchain_intro.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag 'mobile/blockchain_intro/txt_robin.png', alt: 'logo', class: 'side-logo-img' %>
 
   <div class="page-title">
-    <p>即将开通区块链钱包</p>
+    <p>开通区块链钱包</p>
     <p>多重好礼送不停</p>
   </div>
   <%= image_tag 'mobile/blockchain_intro/txt.png', alt: 'logo', class: 'txt-img' %>
