refs: add model e_wallet_transtions

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -441,6 +441,9 @@
             <li>
               <%= link_to 'KOL策略管理', marketing_dashboard_e_wallets_kol_promotions_path %>
             </li>
+            <li>
+              <%= link_to 'PUT币活动奖励列表', marketing_dashboard_e_wallets_campaigns_path %>
+            </li>
           </ul>
         </li>
         <li>
