--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -37,8 +37,23 @@
   </div>
 </div>
 
-<div class="page full-page overflow-hidden pmes-reg-page" id="pmes_detail_page">
-  <div class="default-card put-balance-card"></div>
+<div class="page full-page overflow-hidden pmes-statistics-page" id="pmes_detail_page">
+  <div class="default-card put-balance-card">
+    <h5 class="card-title">PUT余额</h5>
+    <div class="balance-num">132.42</div>
+    <div class="balance-status left">提现中PUT<span class="num">20</span></div>
+    <div class="balance-status right">即将入账PUT<span class="num">20</span></div>
+  </div>
 
-  <div class="default-card put-trend-card"></div>
+  <div class="default-card put-trend-card">
+    <h5 class="card-title">PUT价格走势</h5>
+  </div>
+
+  <div class="about-put">关于PUT的常见问题解答 <%= image_tag 'mobile/blockchain_pmes/icon_question.png', class: 'icon-question' %></div>
+
+  <div class="btn-group foot fill">
+    <div class="item">
+      <button type="button" class="button btn-cyan btn-block">PUT兑换</button>
+    </div>
+  </div>
 </div>
