--- a/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
@@ -13,12 +13,11 @@
     <tbody>
       <% @campaigns.each do |campaign|%>
       <tr>
-        <% transtions = EWallet::Transtion.where(resource: campaign) %>
         <td><%= campaign.name %></td>
         <td><%= campaign.kols.count %></td>
-        <td><%= (transtions.map &:amount).sum %></td>
-        <td><%= transtions.pending.count %></td>
-        <td><%= (transtions.pending.map &:amount).sum %></td>
+        <td><%= (campaign.e_wallet_transtions.map &:amount).sum %></td>
+        <td><%= campaign.e_wallet_transtions.pending.count %></td>
+        <td><%= (campaign.e_wallet_transtions.pending.map &:amount).sum %></td>
         <td>
           <%= link_to "详情", marketing_dashboard_e_wallets_campaign_transactions_path(campaign) %>
           <%#= link_to "提款", withdraw_marketing_dashboard_e_wallets_campaign_transaction_path(campaign) if transtions.pending.present? %>
