--- a/app/assets/stylesheets/mobile/default.scss
+++ b/app/assets/stylesheets/mobile/default.scss
@@ -129,8 +129,8 @@ input[type="reset"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner, i
 .btn-red:active, .btn-red.active { color: #fff; background-color: #b94343; }
 .btn-white { border-color: #fff; color: #000; background-color: #fff; }
 .btn-white:active, .btn-white.active { color: #000; background-color: #f5f5f5; }
-.btn-cyan { border-color: #2dcad0; color: #fff; background-color: #2dcad0; }
-.btn-cyan:active, .btn-cyan.active { color: #fff; background-color: #23a2a7; }
+.btn-cyan { border-color: nth($cyan, 1); color: #fff; background-color: nth($cyan, 1); }
+.btn-cyan:active, .btn-cyan.active { color: #fff; background-color: nth($cyan, 2); }
 .btn-outline { color: inherit; background-color: transparent; }
 
 /*button group styles*/
@@ -144,6 +144,19 @@ input[type="reset"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner, i
 .btn-group.fill .item { padding: 0; }
 .btn-group.fill .item .button { border-radius: 0; font-size: 1.6rem; }
 .btn-group.foot.with-bd { border-top: 1px solid #e2e2e2; }
+
+/*alert modal styles*/
+.alert-modal { display: none; position: fixed; z-index: 100; top: 0; left: 0; width: 100%; height: 100%; }
+.modal-cover { position: fixed; z-index: 0; top: 0; right: 0; bottom: 0; left: 0; background-color: rgba(#000, .8); }
+.modal-content { position: absolute; z-index: 1; top: 50%; left: 50%; @include display-flex; flex-direction: column; justify-content: space-between; width: 80%; max-height: 80%; border-radius: 6px; background-color: #fff; -webkit-transition-property: -webkit-transform, opacity; transition-property: transform, opacity; @include transform(translate3d(-50%, -50%, 0) scale(1.185)); opacity: 0; overflow: hidden; }
+.modal-header { padding: 18px 0 0; text-align: center; font-size: 18px; font-weight: bold; }
+.modal-body { max-height: 300px; line-height: 20px; padding: 0 24px; margin: 24px 0; text-align: center; vertical-align: middle; overflow-y: auto; -webkit-overflow-scrolling: touch; }
+.modal-footer { @include display-flex; border-top: 1px solid #cbcbcb; }
+.modal-footer .btn { @include flex(1); display: block; width: 100%; height: 50px; line-height: 50px; padding: 0; border: none; border-right: 1px solid #cbcbcb; border-radius: 0; text-align: center; font-size: 18px; color: #7f7f7f; }
+.modal-footer .btn:last-child { border-right: none; }
+.modal-footer .btn:active, .modal-footer .btn:focus { background-color: #f7f7f7; }
+.modal-footer .btn-confirm { font-weight: bold; color: #fff; background-color: nth($cyan, 1); }
+.alert-modal.active .modal-content { -webkit-transition-duration: 400ms; transition-duration: 400ms; @include transform(translate3d(-50%, -50%, 0) scale(1)); opacity: 1; }
 
 /*
 **page styles end && class reset begin**
