--- a/app/assets/stylesheets/mobile/mixins/_colors.scss
+++ b/app/assets/stylesheets/mobile/mixins/_colors.scss
@@ -2,7 +2,7 @@ $red: #ffa4d7 #ce68ae;
 $green: #9dce51 #67b13a;
 $blue: #7edffd #43aecf;
 $orange: #fea650 #f46d1b;
-$cyan: #89d4eb #2795c9;
+$cyan: #2dcad0 #23a2a7;
 $yellow: #fd8d49 #dea223;
 $purple: #aa83f4 #845ccd;
 $gray: #989898;
