--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -1,4 +1,4 @@
-<div class="page full-page overflow-hidden pmes-reg-page hide" id="pmes_reg_page">
+<div class="page full-page overflow-hidden pmes-reg-page" id="pmes_reg_page">
   <div class="content-panel">
     <div class="content-body default-form size-b white-bg">
       <%= hidden_field_tag 'current_token', @current_token %>
@@ -19,12 +19,12 @@
       </label>
       <label class="form-group">
         <div class="form-input">
-          <input type="password" class="form-control" id="password" placeholder="请输入密码" />
+          <input type="password" class="form-control" id="password" minlength="6" maxlength="6" placeholder="请输入密码" />
         </div>
       </label>
       <label class="form-group">
         <div class="form-input">
-          <input type="password" class="form-control" id="password_confirm" placeholder="请重复密码" />
+          <input type="password" class="form-control" id="password_confirm" minlength="6" maxlength="6" placeholder="请重复密码" />
         </div>
       </label>
     </div>
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<div class="page full-page overflow-hidden pmes-statistics-page" id="pmes_detail_page">
+<div class="page full-page overflow-hidden pmes-statistics-page hide" id="pmes_statistics_page">
   <div class="default-card put-balance-card">
     <h5 class="card-title">PUT余额</h5>
     <div class="balance-num">132.42</div>
@@ -45,15 +45,15 @@
     <div class="balance-status right">即将入账PUT<span class="num">20</span></div>
   </div>
 
-  <div class="default-card put-trend-card">
+  <!-- <div class="default-card put-trend-card">
     <h5 class="card-title">PUT价格走势</h5>
-  </div>
+  </div> -->
 
   <div class="about-put">关于PUT的常见问题解答 <%= image_tag 'mobile/blockchain_pmes/icon_question.png', class: 'icon-question' %></div>
 
-  <div class="btn-group foot fill">
+  <!-- <div class="btn-group foot fill">
     <div class="item">
       <button type="button" class="button btn-cyan btn-block">PUT兑换</button>
     </div>
-  </div>
+  </div> -->
 </div>
