--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -40,9 +40,9 @@
 <div class="page full-page overflow-hidden pmes-statistics-page hide" id="pmes_statistics_page">
   <div class="default-card put-balance-card">
     <h5 class="card-title">PUT余额</h5>
-    <div class="balance-num">132.42</div>
-    <div class="balance-status left">提现中PUT<span class="num">20</span></div>
-    <div class="balance-status right">即将入账PUT<span class="num">20</span></div>
+    <div class="balance-num" id="amount_active">0</div>
+    <!-- <div class="balance-status left">提现中PUT<span class="num">0</span></div> -->
+    <div class="balance-status right">即将入账PUT<span class="num" id="amount_frozen">0</span></div>
   </div>
 
   <!-- <div class="default-card put-trend-card">
