--- a/app/assets/stylesheets/mobile/blockchain_pmes.scss
+++ b/app/assets/stylesheets/mobile/blockchain_pmes.scss
@@ -1,6 +1,10 @@
 .pmes-reg-page {
 }
 
+.pmes-login-page {
+  background-color: #fff;
+}
+
 .pmes-statistics-page {
   .about-put {
     position: absolute;
@@ -21,7 +25,7 @@
 
 }
 
-.btn-pmes-reg-submit {
+.btn-pmes-submit {
   border-radius: 22px;
 }
 
