refs:transtiong modify

--- a/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @transactons.each do |tr|%>
+      <% @transtions.each do |tr|%>
       <tr>
         <td><%= tr.kol.name %></td>
         <td><%= tr.kol.e_wallet_account.token %>
