--- a/app/views/pages/pmes_demo.html.erb
+++ b/app/views/pages/pmes_demo.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_include_tag 'https://cdn.robin8.net/pmes.min.js', 'data-turbolinks-track' => true %>
 <%= hidden_field_tag 'e_wallet_account', @kol.e_wallet_account.try(:token) %>
+<%= hidden_field_tag 'host_url', Rails.application.secrets.domain %>
 
 <div class="page full-page overflow-hidden pmes-statistics-page" id="pmes_statistics_page">
   <div class="default-card put-balance-card">
@@ -29,6 +30,16 @@
       <label class="form-group with-bd">
         <div class="form-input">
           <input type="password" class="form-control text-center" id="login_password" minlength="6" maxlength="6" placeholder="请输入密码" />
+          <!-- <input type="tel" minlength="6" maxlength="6" class="form-control text-center" id="login_password" class="real-ipt">
+          <div class="ios-password-input clearfix">
+            <input type="password" class="form-control text-center" />
+            <input type="password" class="form-control text-center" />
+            <input type="password" class="form-control text-center" />
+            <input type="password" class="form-control text-center" />
+            <input type="password" class="form-control text-center" />
+            <input type="password" class="form-control text-center" />
+          </div> -->
+
         </div>
       </label>
     </div>
