--- a/app/assets/stylesheets/mobile/default.scss
+++ b/app/assets/stylesheets/mobile/default.scss
@@ -99,13 +99,19 @@ input[type="reset"]::-moz-focus-inner, input[type="button"]::-moz-focus-inner, i
 .text-area-container textarea { width: 100%; height: auto; line-height: 20px; border: none; font-size: 1.4rem; }
 .default-form.pl10 { padding-left: 10px; }
 .default-form.with-bd { border-bottom: 1px solid #e2e2e2; }
-.default-form.size-b .form-group { height: 52px; }
 .default-form.size-b .form-group .form-label { height: 50px; line-height: 50px; }
 .default-form.size-b .form-group .form-label .icon { width: 50px; height: 50px; line-height: 50px; }
 .default-form.size-b .form-group .form-control { height: 50px; }
 .default-form.size-b .form-group .form-text { height: 50px; line-height: 50px; }
 .default-form.size-b .form-group .form-tail-btn > .button, .default-form.size-b .form-group .form-tail-btn > button { height: 50px; line-height: 44px; }
 .default-form.size-b .form-group .form-tail-text { height: 50px; line-height: 50px; }
+
+/*pwd styles*/
+.login-password { text-indent: -999em; margin-left: -100%; opacity: 0; }
+.password-input-container { position: absolute; z-index: 1; top: 0; left: 0; width: 100%; @include display-flex(); background-color: #fff; }
+.password-input-item { border: none; border-top: 1px solid #bbb; border-right: 1px solid #bbb; border-bottom: 1px solid #bbb; text-align: center;
+  &:first-child { border-left: 1px solid #bbb; }
+}
 
 /*default card styles*/
 .default-card { border-radius: 5px; box-shadow: 0px 4px 8px 0px rgba(0, 11, 30, .04); background-color: #fff; }
