--- a/app/views/pages/blockchain_intro.html.erb
+++ b/app/views/pages/blockchain_intro.html.erb
@@ -13,11 +13,10 @@
       <span class="inner">区块链钱包介绍</span>
     </h5>
     <div class="content">
-      <p>区块链钱包，就是存储BTC,ETH,QTUM等虚拟货币的工具，在去年Robin8发布自己的虚拟货币PUT，它和其他虚拟货币一样具有巨大的升值空间。</p>
-      <br />
-      <p>现在，Robin8即将在APP中强势引入区块链钱包，我们是将虚拟货币结合至APP的第一家，添加了区块链钱包后，在保证每个人安全性下，确保每个人都能通过活动获得不同数量的虚拟货币，让我们在日常生活中积累财富，给每个人一夜暴富的可能。</p>
-      <br />
-      <p>敬请期待...</p>
+      <p>很荣幸的通知，Robin8推出一个行业领先，基于区块链技术的PUT奖励系统。在开通了PUT钱包后，用户通过参与Robin8生态圈内的不同活动将会获得不同的PUT奖励，我们诚意的邀请您参与这次公开测试获得奖励，点击立即开通赢取奖励。</p>
+      <p class="text-center">
+        <button type="button" class="button btn-lg btn-open">开通PUT钱包</button>
+      </p>
     </div>
   </div>
 </div>
