--- a/app/assets/stylesheets/mobile/blockchain_intro.scss
+++ b/app/assets/stylesheets/mobile/blockchain_intro.scss
@@ -92,6 +92,19 @@
         margin-top: 4px;
       }
 
+      .btn-open {
+        width: 150px;
+        height: 50px;
+        padding: 0;
+        margin-top: 60px;
+        border-radius: 25px;
+        box-shadow: 0px 4px 10px 0px rgba(94, 45, 246, 0.42);
+        color: #fff;
+        background-image: -moz-linear-gradient(-83deg, rgb(65, 10, 191) 0%, rgb(20, 0, 148) 100%);
+        background-image: -webkit-linear-gradient(-83deg, rgb(65, 10, 191) 0%, rgb(20, 0, 148) 100%);
+        background-image: -ms-linear-gradient(-83deg, rgb(65, 10, 191) 0%, rgb(20, 0, 148) 100%);
+      }
+
     }
 
   }
