--- a/app/views/pages/blockchain_intro.html.erb
+++ b/app/views/pages/blockchain_intro.html.erb
@@ -15,7 +15,7 @@
     <div class="content">
       <p>很荣幸的通知，Robin8推出一个行业领先，基于区块链技术的PUT奖励系统。在开通了PUT钱包后，用户通过参与Robin8生态圈内的不同活动将会获得不同的PUT奖励，我们诚意的邀请您参与这次公开测试获得奖励，点击立即开通赢取奖励。</p>
       <p class="text-center">
-        <button type="button" class="button btn-lg btn-open">开通PUT钱包</button>
+        <button type="button" class="button btn-lg btn-open" id="blockchain_open_btn">开通PUT钱包</button>
       </p>
     </div>
   </div>
