--- a/app/views/marketing_dashboard/e_wallets/redis_sets/sales.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/redis_sets/sales.html.erb
@@ -18,8 +18,8 @@
     </tr>
     <tr>
       <td>数量</td>
-      <td><%= text_field_tag :put_amount, $redis.get('put_amount'), :class => "data-value"  %>
-          <%= link_to "提交修改",  "#" , class: 'btn btn-xs btn-primary update-value', 'data-key': 'put_amount', confirm: "确定更改吗？" %>
+      <td><%= text_field_tag :put_count, $redis.get('put_count'), :class => "data-value"  %>
+          <%= link_to "提交修改",  "#" , class: 'btn btn-xs btn-primary update-value', 'data-key': 'put_count', confirm: "确定更改吗？" %>
       </td>
     </tr>
 </table>
