--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -6,6 +6,7 @@
 *= require font-awsome
 *= require marketing_dashboard/jqzoom.css
 *= require marketing_dashboard/campaigns.scss
+*= require marketing_dashboard/e_wallets.scss
 */
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
