--- a/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <h3>
   PUT活动奖励列表
-  <button type="button" class="btn btn-primary pull-right" id="put_remit_btn">批量付款</button>
+  <!-- <button type="button" class="btn btn-primary pull-right" id="put_remit_btn">批量付款</button> -->
 </h3>
 <hr>
 <table class="table table-striped">
@@ -8,7 +8,7 @@
     <tr>
       <th>用户名</th>
       <th>PUT address</th>
-      <th>奖励金额</th>
+      <th>奖励数量</th>
       <th>tx_id</th>
       <th>操作</th>
     </tr>
@@ -25,3 +25,28 @@
     <% end %>
   </tbody>
 </table>
+
+<div class="modal fade" id="token_input_modal" tabindex="-1" role="dialog" aria-labelledby="token_input_modal_label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="token_input_modal_label">请输入您的Token和密码</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="password_input">Password:</label>
+          <input type="password" class="form-control" id="password_input" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <label for="token_input">Token:</label>
+          <textarea class="form-control" rows="4" id="token_input" placeholder="Token"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="token_confirm">确定</button>
+      </div>
+    </div>
+  </div>
+</div>
